--- a/lesson7-8/css/style.css
+++ b/lesson7-8/css/style.css
@@ -152,15 +152,6 @@ main{
     width: 9%;
     margin-right: 0;
 }
-/*.slider__arrow{
-    position: absolute;
-    top: 180px;
-    left: -320px;
-}
-.slider__arrow--right{
-    transform: rotate(180deg);
-    left: 1255px;
-}*/
 .slider{
     max-width: 960px;
     margin: 0 auto;
@@ -641,6 +632,9 @@ footer{
     }
 }
 @media (max-width: 480px){
+    nav{
+        padding-bottom: 84px;
+    }
     .droplist_menu{
         display: block;
         width: 55%;
@@ -673,7 +667,7 @@ footer{
         display: none;
     }
     .slider__images{
-        width: 56%;
+        width: 59%;
         transform: scale(0.7);
         top: -80px;
         right: 10px;
@@ -682,6 +676,7 @@ footer{
         margin-top: 100px;
     }
     .slider__arrow--right{
+        width: 10px;
     }
     .slider__nav{
         text-align: center;
@@ -720,6 +715,9 @@ footer{
     .logos__img{
         margin-right: 0;
         margin-top: 30px;
+    }
+    .text__wrapper{
+        padding-top: 25px;
     }
     .text__box{
         width: 88%;
