--- a/lesson7-8/css/style.css
+++ b/lesson7-8/css/style.css
@@ -11,7 +11,9 @@ body{
 }
 
 
+
 /*--HEADER--*/
+
 
 
 .background{
@@ -31,7 +33,7 @@ header{
     display: inline-block;
     color: white;
     font-size: 48px;
-    margin-right: 140px;
+    margin-right: 164px;
 }
 .logo__part{
     font-family: 'league_gothicregular', Arial, sans-serif;
@@ -351,6 +353,26 @@ section{
     line-height: 24px;
     margin-top: 10px;
 }
+.testimonials__triangle{
+    position: relative;
+    padding-left: 87%;
+    margin-top: -1px;
+}
+.triangle__back{
+    width: 0;
+    height: 0;
+    border-top: 20px solid #f6f6f6;
+    border-left: 20px solid transparent;
+    position: absolute;
+}
+.triangle__front{
+    width: 0;
+    height: 0;
+    border-top: 18px solid white;
+    border-left: 18px solid transparent;
+    position: absolute;
+    margin-left: 1px;
+}
 .testimonials__slider{
     padding-bottom: 71px;
     padding-top: 22px;
@@ -454,10 +476,11 @@ section{
     border-top: 1px solid #d8d8d8;
 }
 .text__wrapper{
-    max-width: 960px;
+    max-width: 990px;
     margin: 0 auto;
     padding-top: 95px;
     padding-bottom: 93px;
+    padding-left: 25px;
 }
 .text__box{
     display: inline-block;
@@ -503,7 +526,9 @@ section{
 }
 
 
+
 /*--FOOTER--*/
+
 
 
 footer{
@@ -512,10 +537,15 @@ footer{
     padding: 46px 0;
     background-size: cover;
 }
+.footer__box{
+    max-width: 990px;
+    margin: 0 auto;
+}
 .menu--footer{
     text-align: left;
     display: inline-block;
     vertical-align: 0;
+    margin-left: 10px;
 }
 .menu--footer .menu__item{
     margin-left: 0;
@@ -524,10 +554,6 @@ footer{
 .menu--footer .menu__link{
     font-size: 20px;
     text-shadow: 1px 2px 1px #3b3b3b;
-}
-.footer__box{
-    max-width: 960px;
-    margin: 0 auto;
 }
 .designed{
     display: inline-block;
@@ -547,7 +573,9 @@ footer{
 }
 
 
+
 /*--MEDIA QUERIES--*/
+
 
 
 @media (max-width: 768px){
@@ -637,10 +665,10 @@ footer{
     }
     .text__box{
         width: 27%;
-        padding-left: 20px;
         height: 200px;
         overflow: hidden;
         padding-right: 1%;
+        margin-right: 20px;
     }
     .text__titel{
         display: none;
@@ -754,7 +782,6 @@ footer{
     }
     .text__box{
         width: 88%;
-        margin-left: 20px;
         display: block;
         height: 210px;
     }
