--- a/js3-4/style.css
+++ b/js3-4/style.css
@@ -1,13 +1,44 @@
+body{
+    font-family: Arial, sans-serif;
+    padding: 50px;
+    background-color: gray;
+}
+.wrapper{
+    border: 1px solid #000;
+    padding: 30px 100px;
+    width: 650px;
+    background-color: white;
+}
+header{
+    font-size: 30px;
+    text-align: center;
+}
+form{
+    width: 650px;
+}
 .question{
-    line-height: 55px;
+    line-height: 40px;
+    font-size: 20px;
+}
+label{
+    display: block;
+    margin-left: 20px;
+    padding-left: 25px;
     font-size: 16px;
+    position: relative;
 }
-.input_checkbox{
+input{
+    position: absolute;
+    padding-right: 10px;
+    left: 0;
+    top: 10px;
 }
-.answer{
-    padding-left: 35px;
-}
-.button{
+button{
     margin-top: 20px;
-    margin-left: 200px;
+    margin-left: 220px;
+    background-color: #cfe2f3;
+    border: 2px solid #000;
+    border-radius: 2px;
+    font-size: 16px;
+    padding: 10px 40px;
 }
