--- a/js9-10/css/style.css
+++ b/js9-10/css/style.css
@@ -1,3 +1,192 @@
 body{
-    padding: 100px;
+    padding: 150px;
+    font-family: Arial, sans-serif;
+    background-color: #8b979c;
+}
+.block{
+    display: block;
+    margin-top: 7px;
+}
+
+
+/*menu*/
+
+.menu{
+    width: 1000px;
+    background-color: #323232;
+    font-size: 14px;
+    border-top: 1px solid #cacbcb;
+    border-bottom: 1px solid black;
+    box-shadow: 0 3px 10px;
+    position: absolute;
+    top: 40px;
+    z-index: 1;
+}
+.menu>li{
+    display: inline-block;
+    line-height: 28px;
+}
+.menu a{
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 0 15px;
+}
+.triangle{
+    padding-left: 2px;
+}
+.submenu{
+    width: 135px;
+    /*display: none;*/
+    position: absolute;
+    transform: translateY(-2em);
+    opacity: 0;
+    z-index: -1;
+    visibility: hidden;
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+
+    top: 29px;
+    line-height: 24px;
+    background-color: #323232;
+}
+.submenu2{
+    position: absolute;
+    transform: translateY(-2em);
+    opacity: 0;
+    z-index: -1;
+    visibility: hidden;
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;    position: absolute;
+    line-height: 24px;
+    left: 135px;
+    margin-top: -24px;
+    width: 135px;
+    background-color: #323232;
+}
+.menu li:hover .submenu{
+    /*display: block;*/
+    visibility: visible;
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0%);
+    transition-delay: 0s, 0s, 0.3s;
+}
+.submenu li:hover ul{
+    /*display: block;*/
+    visibility: visible;
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0%);
+    transition-delay: 0s, 0s, 0.3s;
+}
+.menu a:hover{
+    color: lightgreen;
+    background-color: #0c3256;
+    transition: 1s;
+}
+
+/*checkbox*/
+
+
+.control-group {
+    display: inline-block;
+    width: 200px;
+    height: 210px;
+    margin: 10px;
+    padding: 30px;
+    text-align: left;
+    vertical-align: top;
+    background: #fff;
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+}
+.control {
+    font-size: 18px;
+    position: relative;
+    display: block;
+    margin-bottom: 15px;
+    padding-left: 30px;
+    cursor: pointer;
+}
+
+.control input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+.control__indicator {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background: #e6e6e6;
+}
+
+.control--radio .control__indicator {
+    border-radius: 50%;
+}
+/* Hover and focus states */
+.control:hover input ~ .control__indicator,
+.control input:focus ~ .control__indicator {
+    background: #ccc;
+}
+
+/* Checked state */
+.control input:checked ~ .control__indicator {
+    background: #2aa1c0;
+}
+
+/* Hover state whilst checked */
+.control:hover input:not([disabled]):checked ~ .control__indicator,
+.control input:checked:focus ~ .control__indicator {
+    background: #0e647d;
+}
+
+/* Disabled state */
+.control input:disabled ~ .control__indicator {
+    pointer-events: none;
+    opacity: .6;
+    background: #e6e6e6;
+}
+
+/* Check mark */
+.control__indicator:after {
+    position: absolute;
+    display: none;
+    content: '';
+}
+
+/* Show check mark */
+.control input:checked ~ .control__indicator:after {
+    display: block;
+}
+
+/* Checkbox tick */
+.control--checkbox .control__indicator:after {
+    top: 4px;
+    left: 8px;
+    width: 3px;
+    height: 8px;
+    transform: rotate(45deg);
+    border: solid #fff;
+    border-width: 0 2px 2px 0;
+}
+
+/* Disabled tick colour */
+.control--checkbox input:disabled ~ .control__indicator:after {
+    border-color: #7b7b7b;
+}
+
+/* Radio button inner circle */
+.control--radio .control__indicator:after {
+    top: 7px;
+    left: 7px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #fff;
+}
+
+/* Disabled circle colour */
+.control--radio input:disabled ~ .control__indicator:after {
+    background: #7b7b7b;
 }
