--- a/js9-10/css/style.css
+++ b/js9-10/css/style.css
@@ -66,22 +66,22 @@ body{
     width: 135px;
     background-color: #323232;
 }
-/*.menu li:hover .submenu{*/
-    /*!*display: block;*!*/
+.menu li:hover .submenu{
+    /*display: block;*/
     /*visibility: visible;*/
     /*opacity: 1;*/
     /*z-index: 1;*/
     /*transform: translateY(0%);*/
     /*transition-delay: 0s, 0s, 0.3s;*/
-/*}*/
-/*.submenu li:hover ul{*/
-    /*!*display: block;*!*/
+}
+.submenu li:hover ul{
+    /*display: block;*/
     /*visibility: visible;*/
     /*opacity: 1;*/
     /*z-index: 1;*/
     /*transform: translateY(0%);*/
     /*transition-delay: 0s, 0s, 0.3s;*/
-/*}*/
+}
 .menu a:hover{
     color: lightgreen;
     background-color: #0c3256;
