--- a/lesson1/style.css
+++ b/lesson1/style.css
@@ -1,5 +1,5 @@
 h1{
-  font-family: arial;
+  font-family: Arial, sans-serif;
   text-align: center;
   font-size: 36px;
 
@@ -9,10 +9,11 @@ h1{
 h2{
   font-size: 18px;
 }
-.all{height: 1024px;
-width: 1024px;
-background: #f7f1f5;
-padding-top: 24px;
+.all{
+  height: 1024px;
+  width: 1024px;
+  background: #f7f1f5;
+  padding-top: 24px;
 }
 .foto{
   margin-left: 150px;
@@ -25,7 +26,7 @@ padding-top: 24px;
 }
 .text{
   width: 500px;
-  font-family: Myriad Pro;
+  font-family: Myriad Pro, sans-serif;
   margin-left: 263px;
   font-size: 14px;
 }
