--- a/js19-20/css/owlcarousel/owl.theme.default.css
+++ b/js19-20/css/owlcarousel/owl.theme.default.css
@@ -11,7 +11,7 @@
   display: inline-block;
   position: relative;
 }
-.active:after{
+.owl-dot.active span{
   content: "";
   width: 9px;
   height: 9px;
