--- a/js19-20/css/src/style.css
+++ b/js19-20/css/src/style.css
@@ -5,7 +5,7 @@ body{
 a{
   text-decoration: none; }
 .clearfix:after {
-  content: ".";
+  content: "";
   display: block;
   height: 0;
   clear: both;
