--- a/lesson7-8/css/style.css
+++ b/lesson7-8/css/style.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'league_gothicregular';
-    src: url('../fonts/leaguegothic-regular-webfont.woff2') format('woff2'),
+    src: url('../fonts/leaguegothic-regular-webfont.eot') format('eot'),
          url('../fonts/leaguegothic-regular-webfont.woff') format('woff');
-         url('../fonts/leaguegothic-regular-webfont.eot') format('eot');
+         url('../fonts/leaguegothic-regular-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
