--- a/test/src/css/style.scss
+++ b/test/src/css/style.scss
@@ -36,11 +36,11 @@ header{
 }
 .wrapper{
   margin: 0 auto;
-  width: 940px;
+  width: 320px;
 }
 .section-wrapper{
   margin: 0 auto;
-  width: 940px;
+  width: 320px;
 }
 
 nav{
@@ -66,20 +66,21 @@ nav{
 h1{
   font-size: 20px;
   font-weight: bold;
+  padding-top: 50px;
   text-transform: uppercase;
 }
 .slogan{
   margin: 0 auto;
-  font-size: 52px;
+  font-size: 30px;
   font-weight: bold;
   text-transform: uppercase;
-  line-height: 65px;
+  line-height: 40px;
   padding-top: 40px;
-  width: 500px;
+  //width: 500px;
 }
 .slogan-2{
   font-size: 18px;
-  line-height: 100px;
+  padding: 15px 0 30px 0;
 
   font-family: $roboto;
 }
