--- a/Chili-web/css/style.css
+++ b/Chili-web/css/style.css
@@ -124,7 +124,7 @@ header{
     width: 682px;
 }
 .top-sales__heading{
-    background-image: url("../img/top_sales.png");
+    background-image: url("../img/top-sales.png");
     background-repeat: no-repeat;
     font-weight: bold;
     font-size: 28px;
